--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Deploy to S3
       run: |
-        aws s3 sync ./build/ s3://bucket-s3-cfr --delete
+        aws s3 sync ./dist/ s3://bucket-s3-cfr --delete
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
