--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,7 @@ jobs:
     
     - name: Invalidate CloudFront cache
       run: |
-        aws cloudfront create-invalidation --distribution-id dq98b3ehg679g --paths "/*"
+        aws cloudfront create-invalidation --distribution-id E326ER1EZR901O --paths "/*"
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
